# AbsoluteVel

./: .gitignore  AbsoluteVel.sln  CMakeLists.txt  GameAPI  README.md
AbsoluteVel/: AbsoluteVel.vcxproj  AbsoluteVel.vcxproj.filters  dllmain.c
AbsoluteVel/Objects/: All.c  HUD.c  HUD.h  Player.c  Player.h
